<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sonnet Player</string>
    <string name="video_loading">Loading video...</string>
    <string name="video_error">Error playing video</string>
    <string name="permission_denied">Storage permission is required to play videos</string>
    <string name="player_loading">Loading...</string>
    <string name="player_error_title">Playback Error</string>
    <string name="player_error">Unable to play video</string>
    <string name="player_retry">Retry</string>
    <string name="cd_more">More options</string>
    <string name="cd_back">Back</string>
    <string name="cd_play_pause">Play or pause</string>
    <string name="cd_skip_previous">Skip to previous</string>
    <string name="cd_skip_next">Skip to next</string>
    <string name="cd_rewind">Rewind</string>
    <string name="cd_fast_forward">Fast forward</string>
    <string name="cd_forward">Forward</string>
    <string name="cd_settings">Settings</string>
    <string name="cd_fullscreen">Toggle fullscreen</string>
    <string name="speed_1x">1x</string>
    <string name="display_fit">Fit</string>
    <string name="lock_orientation">Lock orientation</string>
</resources>
    <!-- Dialog strings -->
    <string name="dialog_url_hint">Enter video URL</string>
    <string name="dialog_add_url_title">Add URL</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="invalid_url">Invalid URL</string>
    
    <!-- Display modes -->
    <string name="display_fill">Fill</string>
    <string name="display_zoom">Zoom</string>
    
    <!-- Speed control -->
    
    <!-- Dialog strings -->
    <string name="dialog_url_hint">Enter video URL</string>
    <string name="dialog_add_url_title">Add URL</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="invalid_url">Invalid URL</string>
    
    <!-- Display modes -->
    <string name="display_fill">Fill</string>
    <string name="display_zoom">Zoom</string>
    
    <!-- Speed control -->
    <string name="speed_control">Speed</string>
</resources>
